fix: JWT 補上角色資訊並落實 ADMIN 權限控管（對應 Code Review #3）
SecurityConfig 註解宣稱商品異動限 ADMIN，實際規則僅檢查
authenticated()，未做角色區分；JwtAuthenticationFilter 建立
Authentication 時權限清單為空，JWT payload 也未帶角色，即使補上
hasRole(ADMIN) 規則也不會有人擁有該角色，權限控管形同虛設。

JwtUtil.generateToken() 簽章改為 (username, role)，寫入角色 claim，
並新增 getRole(token)；AuthService.login() 同步補上角色參數。
JwtAuthenticationFilter 解析 token 中的角色，轉為
SimpleGrantedAuthority(ROLE_ + role) 帶入 Authentication，取代
原本 Collections.emptyList()。SecurityConfig 新增
POST/PUT /api/products/**、/api/products/delete/** 限定
hasRole(ADMIN) 的規則。

驗證：以 Postman 測試 admin 可建立商品、alice 呼叫同一 API 得
403、alice 瀏覽性 API 仍正常回傳 200、未帶 token 呼叫回 403
（HTTP 語意應為 401，另立 🟡 追蹤，不影響本次角色控管判定）。